@@ -240,6 +240,7 @@ typedef long long unsigned int ILuint64;
 #define IL_TEXTURE		0x044F  //!< Medieval II: Total War Texture - .texture extension
 #define IL_DPX			0x0450  //!< Digital Picture Exchange - .dpx extension
 #define IL_UTX			0x0451  //!< Unreal (and Unreal Tournament) Texture - .utx extension
+#define IL_MP3			0x0452  //!< MPEG-1 Audio Layer 3 - .mp3 extension
 
 
 #define IL_JASC_PAL     0x0475  //!< PaintShop Pro Palette
